[gd_scene load_steps=22 format=3 uid="uid://cm43xdfewqlpf"]

[ext_resource type="Script" path="res://enemies/monster.gd" id="1_0keml"]
[ext_resource type="Texture2D" uid="uid://6k7rg7kcp7th" path="res://Art/v1.1 dungeon crawler 16X16 pixel pack/1.png" id="2_ojh5a"]
[ext_resource type="Texture2D" uid="uid://c4x2vmn1cdsxl" path="res://Art/v1.1 dungeon crawler 16X16 pixel pack/2.png" id="3_7rfy0"]
[ext_resource type="Texture2D" uid="uid://b5ougkxh8prge" path="res://Art/v1.1 dungeon crawler 16X16 pixel pack/3.png" id="4_wdna6"]
[ext_resource type="Texture2D" uid="uid://8dqygebjxtv" path="res://Art/v1.1 dungeon crawler 16X16 pixel pack/4.png" id="5_nuoyy"]
[ext_resource type="Texture2D" uid="uid://botysfqd2wfeb" path="res://Art/v1.1 dungeon crawler 16X16 pixel pack/5.png" id="6_psplk"]
[ext_resource type="Texture2D" uid="uid://doo2erbk2lj6v" path="res://Art/v1.1 dungeon crawler 16X16 pixel pack/6.png" id="7_1jqov"]
[ext_resource type="Texture2D" uid="uid://p8fh7c71bufe" path="res://Art/v1.1 dungeon crawler 16X16 pixel pack/7.png" id="8_vs2d0"]
[ext_resource type="Texture2D" uid="uid://dsdo8ss257h5n" path="res://Art/v1.1 dungeon crawler 16X16 pixel pack/8.png" id="9_on6yk"]
[ext_resource type="Texture2D" uid="uid://mf00kcbtvd5d" path="res://Art/v1.1 dungeon crawler 16X16 pixel pack/enemies/Pico/1.png" id="10_5g0w7"]
[ext_resource type="Texture2D" uid="uid://diek3t7c2yo43" path="res://Art/v1.1 dungeon crawler 16X16 pixel pack/enemies/Pico/2.png" id="11_543f2"]
[ext_resource type="Texture2D" uid="uid://4tse4ugxwrbb" path="res://Art/v1.1 dungeon crawler 16X16 pixel pack/enemies/Pico/3.png" id="12_erxfr"]
[ext_resource type="Texture2D" uid="uid://cd8vin86xad0" path="res://Art/v1.1 dungeon crawler 16X16 pixel pack/enemies/Pico/4.png" id="13_531tx"]
[ext_resource type="Texture2D" uid="uid://sn0353msbpec" path="res://Art/v1.1 dungeon crawler 16X16 pixel pack/enemies/Pico/5.png" id="14_oe02v"]
[ext_resource type="Texture2D" uid="uid://b80kx4y5iwm6b" path="res://Art/v1.1 dungeon crawler 16X16 pixel pack/enemies/Pico/6.png" id="15_ht65t"]
[ext_resource type="Texture2D" uid="uid://cl8dhta7texmt" path="res://Art/v1.1 dungeon crawler 16X16 pixel pack/enemies/Pico/7.png" id="16_aiejj"]
[ext_resource type="Texture2D" uid="uid://je4kvyi3dyqw" path="res://Art/v1.1 dungeon crawler 16X16 pixel pack/enemies/Pico/8.png" id="17_0o16d"]

[sub_resource type="SpriteFrames" id="SpriteFrames_hpnxr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ojh5a")
}, {
"duration": 1.0,
"texture": ExtResource("3_7rfy0")
}, {
"duration": 1.0,
"texture": ExtResource("4_wdna6")
}, {
"duration": 1.0,
"texture": ExtResource("5_nuoyy")
}, {
"duration": 1.0,
"texture": ExtResource("6_psplk")
}, {
"duration": 1.0,
"texture": ExtResource("7_1jqov")
}, {
"duration": 1.0,
"texture": ExtResource("8_vs2d0")
}, {
"duration": 1.0,
"texture": ExtResource("9_on6yk")
}],
"loop": true,
"name": &"walkLeft",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_5g0w7")
}, {
"duration": 1.0,
"texture": ExtResource("11_543f2")
}, {
"duration": 1.0,
"texture": ExtResource("12_erxfr")
}, {
"duration": 1.0,
"texture": ExtResource("13_531tx")
}, {
"duration": 1.0,
"texture": ExtResource("14_oe02v")
}, {
"duration": 1.0,
"texture": ExtResource("15_ht65t")
}, {
"duration": 1.0,
"texture": ExtResource("16_aiejj")
}, {
"duration": 1.0,
"texture": ExtResource("17_0o16d")
}],
"loop": true,
"name": &"walkRight",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_d0htq"]
radius = 7.0
height = 14.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1vdkd"]
radius = 7.0
height = 16.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0fxyf"]

[node name="monster" type="CharacterBody2D"]
scale = Vector2(2, 2)
collision_layer = 2
collision_mask = 2
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_0keml")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_hpnxr")
animation = &"walkLeft"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -9)
shape = SubResource("CapsuleShape2D_d0htq")

[node name="hitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitBox"]
position = Vector2(1, -9)
shape = SubResource("CapsuleShape2D_1vdkd")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, -8)
shape = SubResource("CircleShape2D_0fxyf")
debug_color = Color(0.996078, 0, 0.156863, 0.419608)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
